Correcting the spellings of image paths

--- a/About/about.html
+++ b/About/about.html
@@ -24,5 +24,9 @@
             </ul>
         </nav>
         <button class="header-button">Campaign</button>
-    </header></body>
+    </header>
+    <section class="about">
+
+    </section>
+</body>
 </html>
