fixing eslint errors

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <title>About</title>
 </head>
 <body id = 'about'>
+     <!-- first page for about page -->
     <section>
         <nav class="nav-top-desktop">
             <ul>
