--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Home</title>
 </head>
 <body id="body">
+    <!-- first page for home -->
     <header class="header" id="home">
         <nav class="nav-top-desktop">
             <ul>
@@ -60,6 +61,7 @@
             </div>
         </div>
     </header>
+     <!-- program page for home -->
     <section class="main-program" id="main-program">
         <h2>Main Program</h2>
         <h6 class="line">────</h6>
@@ -92,6 +94,7 @@
         </div>
         <button class="reg">Pre-Register for this Event</button>
     </section>
+     <!-- partner page for home -->
     <section class="partner" id="partner">
         <h2>Partner</h2>
         <h6 class="line">────</h6>
