fixing eslint errors

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </article>
             <article>
                 <img src="Images/lecture5.png" alt="">
-                <h4>IOT Ignite</h4>
+                <h4>IOT-Ignite</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maiores</p>
             </article>
         </div>
@@ -110,7 +110,7 @@
                 <h1>IOT-Horizons</h1>
             </div>
             <div class="footer-information">
-                <h3>2023 IOT Bootcamp Course Nigeria. Some Rights Reserved</h3>
+                <h3>2023 IOT Bootcamp Course, Nigeria. Some Rights Reserved</h3>
                 <p>Unless otherwise specified, all content on the website is available under a Creative Commons Attribution 2.0 Nigeria license.</p>
             </div>
         </footer>
