making the required changes

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="nav-top-mobile">
-            <button id="wrapper-about"><i class="fa-sharp fa-solid fa-bars"></i></button>
+            <button id="wrapper"><i class="fa-sharp fa-solid fa-bars"></i></button>
         </div>
         <div class="nav-wrapper" id="nav-wrapper-about">
             <a class="close-button" id="close-wrap-about"><i class="fa-solid fa-xmark"></i></a>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="nav-wrapper-desktop">
-            <h1>IOT-Horizons</h1>
+            <img src="./Images/horizons.png" alt="">
             <div>
                 <a href="index.html">Home</a>
                 <a href="">Program</a>
@@ -49,11 +49,11 @@
         </div>
         <div class="presentation-container-about">
             <header>
-                <h3>"Hello Tech world"</h3>
-                <h1>IOT CONGRESS 2023</h1>
+                <h1>"Hello Tech world"</h1>
+                <h3>IOT CONGRESS 2023</h3>
             </header>
             <h6 class="line">────</h6>
-            <p class="main-description-about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, facere? Non blanditiis eligendi eaque adipisci consectetur expedita, nobis quasi tenetur dolore, officia quas fuga ratione debitis dolores, molestias possimus illum.</p>
+            <p class="main-description-about">The Internet of Things (IoT) is a network of physical devices, vehicles, home appliances, and other items embedded with electronics, software, sensors, and connectivity that enables these objects to connect and exchange data.</p>
             <div class="presentation-container-footer">
                 <p>Please contact us per Email for any further questions about Global Congress 2022!</p>
                 <h4>iot@horizons.org</h4>
@@ -64,7 +64,7 @@
         <h2>IOT-HOrizons 2023 Logo</h2>
         <h6 class="line">────</h6>
         <p>The logo of iOT Horizons 2023 was decided through the logo competition on 23 January</p>              
-        <h1>IOT-Horizons</h1>
+        <img src="./Images/horizons.png" alt="">
     </section>
     <section class="see-past">
         <h2>See the past IOT Horizons</h2>
@@ -96,7 +96,7 @@
         </ul>
         <footer>
             <div class="image-footer">
-                <h1>IOT CONGRESS 2023</h1>
+                <img class="footerimage" src="./Images/darkhorizons.png" alt="">
             </div>
             <div class="footer-information">
                 <h3>2023 IOT Bootcamp Course Nigeria. Some Rights Reserved</h3>
