--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="nav-wrapper-desktop">
-                    <h1>IOT-Horizons</h1>
+                <img src="./Images/horizons.png" alt="">
                 <div>
                     <a href="about.html">About</a>
                     <a href="">Program</a>
@@ -51,10 +51,10 @@
         </nav>
         <div class="presentation-container">
             <div>
-                <h3>"Hello Tech world"</h3>
-                <h1>IOT CONGRESS 2023</h1>
+                <h1>"Hello Tech world"</h1>
+                <h3>IOT CONGRESS 2023</h3>
             </div>
-            <p class="main-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, facere? Non blanditiis eligendi eaque adipisci consectetur expedita, nobis quasi tenetur dolore, officia quas fuga ratione debitis dolores, molestias possimus illum.</p>
+            <p class="main-description">The Internet of Things (IoT) is a network of physical devices, vehicles, home appliances, and other items embedded with electronics, software, sensors, and connectivity that enables these objects to connect and exchange data.</p>
             <div class = 'div-presentation'>
                 <h2>2023.02.15(WED) ~ 17(FRI)</h2>
                 <p>@ Ibom Libray Uyo, Nigeria </p>
@@ -69,27 +69,27 @@
             <article>
                 <img src="Images/lecture1.png" alt="">
                 <h4>Lecture</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maiores</p>
+                <p>Covers various aspects of the Internet of Things, including its definition, applications, challenges, and opportunities, as well as current and future trends in the field.</p>
             </article>
             <article>
                 <img src="Images/lecture2.png" alt="">
-                <h4>BC Exhibition</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maiores</p>
+                <h4>IOT Exhibition</h4>
+                <p>Showcases a diverse range of cutting-edge technologies and innovative solutions designed to revolutionize the way we interact with the world, from intelligent homes and smart cities.</p>
             </article>
             <article>
                 <img src="Images/lecture3.png" alt="">
                 <h4>Forum</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maiores</p>
+                <p>A hub for industry professionals, enthusiasts, and thought leaders to discuss the latest trends, share best practices, and exchange ideas about the Internet of Things.</p>
             </article>
             <article>
                 <img src="Images/lecture4.png" alt="">
                 <h4>Workshop</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maiores</p>
+                <p>An interactive training session designed to equip participants with the skills and knowledge to build, deploy and manage internet-connected devices.</p>
             </article>
             <article>
                 <img src="Images/lecture5.png" alt="">
                 <h4>IOT-Ignite</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maiores</p>
+                <p>An event that fosters innovation and collaboration within the Internet of Things (IoT) industry, with a focus on empowering individuals and organizations.</p>
             </article>
         </div>
         <button class="reg">Pre-Register for this Event</button>
@@ -107,7 +107,7 @@
         </ul>
         <footer>
             <div class="Image-footer">
-                <h1>IOT-Horizons</h1>
+                <img src="./Images/horizons.png" alt="">
             </div>
             <div class="footer-information">
                 <h3>2023 IOT Bootcamp Course, Nigeria. Some Rights Reserved</h3>
