fixing linter errors

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="nav-top-mobile">
-            <button id="wrapper"><i class="fa-sharp fa-solid fa-bars"></i></button>
+            <button id="wrapper-about"><i class="fa-sharp fa-solid fa-bars"></i></button>
         </div>
         <div class="nav-wrapper" id="nav-wrapper-about">
             <a class="close-button" id="close-wrap-about"><i class="fa-solid fa-xmark"></i></a>
