making the required changes

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body id = 'about'>
      <!-- first page for about page -->
-    <section>
+     <header class="header" id="home">
         <nav class="nav-top-desktop">
             <ul>
                 <li><i class="fa-brands fa-facebook-f"></i></li>
@@ -59,7 +59,7 @@
                 <h4>iot@horizons.org</h4>
             </div>
         </div>    
-    </section>
+    </header>
     <section class="creative-commons">
         <h2>IOT-HOrizons 2023 Logo</h2>
         <h6 class="line">────</h6>
