making the required changes

--- a/about.html
+++ b/about.html
@@ -37,8 +37,9 @@
             </div>
         </div>
         <div class="nav-wrapper-desktop">
-            <img src="./Images/horizons.png" alt="">
-            <div>
+            <a href="index.html">                
+                <img src="./Images/horizons.png" alt="">
+            </a>            <div>
                 <a href="index.html">Home</a>
                 <a href="">Program</a>
                 <a href="">Join</a>
