--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 </div>
             </div>
             <div class="nav-wrapper-desktop">
-                <img src="./Images/horizons.png" alt="">
+                <a href="index.html">                
+                    <img src="./Images/horizons.png" alt="">
+                </a>
                 <div>
                     <a href="about.html">About</a>
                     <a href="">Program</a>
