changes to styling

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             <li class="airbnb"><i class="fa-solid fa-dna"></i>Prime</li>
         </ul>
         <footer>
-            <div class="image-footer">
+            <div class="image-footer img-no " >
                 <img class="footerimage" src="./Images/darkhorizons.png" alt="">
             </div>
             <div class="footer-information">
