updates to readme fle and app.js

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/a12691952c.js" crossorigin="anonymous"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="breakpoint.css">
     <title>About</title>
 </head>
 <body id = 'about'>
