--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </div>
         <div class="nav-wrapper-desktop">
             <a href="index.html">                
-                <img src="./Images/horizons.png" alt="">
+                <img src="./Images/horizons.png" alt="logo">
             </a>            <div>
                 <a href="index.html">Home</a>
                 <a href="">Program</a>
@@ -66,7 +66,7 @@
         <h2>IOT-HOrizons 2023 Logo</h2>
         <h6 class="line">────</h6>
         <p>The logo of iOT Horizons 2023 was decided through the logo competition on 23 January</p>              
-        <img src="./Images/horizons.png" alt="">
+        <img src="./Images/horizons.png" alt="logo">
     </section>
     <section class="see-past">
         <h2>See the past IOT Horizons</h2>
@@ -98,7 +98,7 @@
         </ul>
         <footer>
             <div class="image-footer img-no " >
-                <img class="footerimage" src="./Images/darkhorizons.png" alt="">
+                <img class="footerimage" src="./Images/darkhorizons.png" alt="logo">
             </div>
             <div class="footer-information">
                 <h3>2023 IOT Bootcamp Course Nigeria. Some Rights Reserved</h3>
